# ladspa.m

./: CMakeLists.txt  Doxyfile  README.md  ladspa.m-test-synth.cc.in  ladspa.m.pc.in  ladspa.m.proto.pc  ladspa.m.test.synth.cc  ladspa.m.test.synth.cc.in  ladspa.m1.pc  ladspam-0.pc  ladspam-plugins.cc  makefile  nix-shell.sh  test_ladspam.cc  test_synth.cc
examples/examples.py/: bandpass_distortion_bandpass.instrument.py  multibandpass_distortion2.py  multibandpass_distortion_delay.py
include/ladspa.m1/: jack_instrument.h
jack-clients/: instrument.cc  synth.cc
jack-tools/: instrument.cc  synth.cc
ladspa.m/: synth.h.in
ladspa.m-0/jack/: instrument.h  synth.h
ladspa.m1/: synth.h
ladspam-0/: i_jack.cc  i_jack.h  m.h  m_jack.cc  m_jack.h  synth.h
ladspam-0/jack/: instrument.cc  instrument.h  synth.cc  synth.h
ladspam-0/private/: ringbuffer.h
ladspam-jack-0/: synth.h
ladspam-jack0/: instrument.cc  makefile  synth.cc  synth.h
ladspam-jack0/ladspam-jack-0/: instrument.cc  instrument.h  synth.cc
plugins/dssi/: ladspa.m.dssi.instrument.cc
plugins/ladspa/: CMakeLists.txt  ladspa.m.dssi.instrument.cc  ladspa.m.env.plugins.cc  ladspa.m.osc.plugins.cc
plugins/lv2/: instrument.cc  makefile  stacktrace.h  uris.h
proto/: CMakeLists.txt  ladspa.m.proto.pc.in  ladspam.proto  ladspam.proto.in  ladspam1.proto  ladspam_pb2_util.py.in
proto/cmake-modules/: FindProtocolBuffers.cmake
proto/examples.py/: kick001.py  multibandpass_distortion1.py  multibandpass_distortion_autopanned.py  simple_sawtooth.instrument.py  simple_sawtooth_autopanned.instrument.py
src/jack/: synth.cc
tests/: ladspa.m.synth.test.cc
